--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -6,5 +6,5 @@
     "noEmit": false,
     "jsx": "react"
   },
-  "include": ["src/server.ts", "src/payload.config.ts", "src/trpc/*"]
+  "include": ["src/server.ts", "src/payload.config.ts", "src/trpc/*.ts"]
 }
